plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}

android {
    namespace 'com.fimi.android.app'
    compileSdk 33

    defaultConfig {
        applicationId "com.fimi.android.app"
        minSdk 21
        targetSdk 28
        versionCode 20
        versionName "V1.0.20"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    packagingOptions {
        resources.excludes += 'META-INF/DEPENDENCIES'
        resources.excludes += 'META-INF/INDEX.LIST'
    }
    lint {
        abortOnError false
        absolutePaths false
        baseline = file("lint-baseline.xml")
    }
//    buildFeatures {
//        viewBinding true
//    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation("ch.qos.logback:logback-classic:1.4.6")
    implementation("ch.qos.logback:logback-core:1.4.6")
    implementation("com.davemorrissey.labs:subsampling-scale-image-view:3.10.0")
    implementation("org.apache.mina:mina-core:2.2.1")
    implementation("org.jdom:jdom2:2.0.6")
    implementation("org.dom4j:dom4j:2.1.4")
    implementation("org.greenrobot:eventbus:3.1.1")
    implementation("org.greenrobot:greendao:3.1.1")
    implementation("com.amap.api:location:6.3.0")

    implementation("com.twitter.sdk.android:twitter:3.1.0")

    implementation("org.tensorflow:tensorflow-android:1.13.1")
    implementation("org.tensorflow:tensorflow-lite:1.13.1")

    implementation("io.reactivex:rxjava:1.1.1")
    implementation("io.reactivex:rxandroid:1.1.0")

    implementation 'me.relex:photodraweeview:2.1.0'

    implementation("com.facebook.android:facebook-login:16.0.1")
    implementation("com.facebook.fresco:fresco:3.0.0")
    implementation("com.facebook.fresco:imagepipeline-native:3.0.0")
    implementation("com.facebook.fresco:imagepipeline:3.0.0")

    implementation("com.facebook.rebound:rebound:0.3.8")
    implementation("com.googlecode.mp4parser:isoparser:1.1.22")

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'

    implementation 'com.google.maps.android:android-maps-utils:0.5'

    implementation 'com.google.code.gson:gson:2.10.1'

    implementation 'com.android.volley:volley:1.2.1'
    //noinspection GradleDependency
    implementation("com.alibaba:fastjson:1.2.80")
    implementation("com.umeng.sdk:common:1.5.3")

    implementation 'com.google.android.gms:play-services-location:21.0.1'
    implementation("com.google.android.gms:play-services-base:18.2.0")
    implementation("com.google.android.gms:play-services-maps:18.1.0")

    implementation("org.apache.httpcomponents:httpclient:4.5.14")
    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.2")
    implementation("com.squareup.okio:okio:3.2.0")
    implementation("com.squareup.picasso:picasso:2.71828")
    implementation("com.squareup.retrofit2:retrofit:2.5.0")

    implementation("com.nostra13.universalimageloader:universal-image-loader:1.9.5")

    implementation 'com.github.markzhai:blockcanary-android:1.5.0'
}